# WordCounter

./: .gitignore  CMakeLists.txt
include/: arg_parser.h
src/: arg_parser.cpp  main.cpp
